improve(commands): enhance agent-persona-localization-engineer with best practices
- Added YAML front matter with allowed-tools specification
- Added dynamic context section with project and i18n detection
- Converted to programmatic STEP-based structure with conditional logic
- Added session-based state management (/tmp/localization-engineer-$SESSION_ID.json)
- Included extended thinking triggers for complex localization challenges
- Added sub-agent delegation patterns for parallel localization work
- Massive content reduction: 1056 → 204 lines (80.7% reduction)
- Transformed from tutorial-style to persona activation focus

Updated progress.json: completed 21/159 commands